--- a/streamingApp/index.html
+++ b/streamingApp/index.html
@@ -55,18 +55,7 @@
 
   <!-- Home -->
 
-  <section class="home container" id="home">
-    <img src="https://picsum.photos/seed/picsum/200/300" alt="" class="home-img">
-    <div class="home-text">
-      <h1 class="home-title"> The Mountain <br>in the Sky</h1>
-      <p> On June 27th</p>
-      <a href="#" class="watch-btn">
-        <i class='bx bx-play-circle' ></i>
-        <span>Trailer</span>
-      </a>
 
-    </div>
-  </section>
   <!-- Carousel -->
   <section>
      <!-- Slideshow container -->
@@ -75,7 +64,7 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <img src="https://picsum.photos/200/200" style="width:100%">
+    <img src="https://picsum.photos/200/200">
     <div class="home-text">
       <h1 class="home-title"><span> The Mountain in the Sky  </span></h1>
       <p><span> On June 27th </span></p>
@@ -87,13 +76,28 @@
   </div>
 
   <div class="mySlides fade">
-    <img src="https://picsum.photos/200/180" style="width:100%">
-    <div class="text">Caption Two</div>
+    <img src="https://picsum.photos/200/180">
+    <div class="home-text">
+      <h1 class="home-title"><span> The Mountain in the Sky  </span></h1>
+      <p><span> On June 27th </span></p>
+      <a href="#" class="watch-btn btn-cent">
+        <i class='bx bx-play-circle' ></i>
+        <p><span>Trailer</span></p>
+      </a>
+    </div>
+
   </div>
 
   <div class="mySlides fade">
-    <img src="https://picsum.photos/200/160" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img src="https://picsum.photos/200/160" class="img-s">
+    <div class="home-text">
+      <h1 class="home-title"><span> The Mountain in the Sky  </span></h1>
+      <p><span> On June 27th </span></p>
+      <a href="#" class="watch-btn btn-cent">
+        <i class='bx bx-play-circle' ></i>
+        <p><span>Trailer</span></p>
+      </a>
+    </div>
   </div>
 
   <!-- Next and previous buttons -->
@@ -110,7 +114,7 @@
 </div> 
   </section>
   <!-- Popular -->
-  <section class="popular container" id="popular">
+  <section class="popular container">
     <!--Heading-->
     <div class="heading">
       <h2 class="heading-title"> Popular now!</h2>
@@ -128,8 +132,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-1"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-1"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -141,8 +145,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-2"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-2"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -154,8 +158,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-3"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-3"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -167,8 +171,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-4"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-4"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -180,8 +184,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-5"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-5"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -193,8 +197,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-6"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-6"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -206,8 +210,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-7"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-7"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -219,8 +223,8 @@
           <div class="movie-box">
             <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
             <div class="box-text">
-              <h2 class="movie-title"> La araña humana</h2>
-              <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+              <h2 class="movie-title" id="pop-name-8"> La araña humana</h2>
+              <span class="movie-type" id="pop-gen-8"> Comedy </span> <!--  Change depending on the API element-->
               <a href="#" class="watch-btn play-btn">
                 <i class='bx bx-play-circle' ></i>
               </a>
@@ -235,7 +239,7 @@
   <section class="movies container" id="movies">
     <!--Heading-->
     <div class="heading">
-      <h2 class="heading-title"> Movies</h2>
+      <h2 class="heading-title"> Comedy</h2>
     </div>
     <!--Movies Content-->
     <div class="movies-content">
@@ -243,8 +247,8 @@
       <div class="movie-box">
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="">
         <div class="box-text">
-          <h2 class="movie-title" id="movie-name-1"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+          <h2 class="movie-title" id="comedy-n-1"> La araña humana</h2>
+          <span class="movie-type"> Comedy </span> 
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -255,8 +259,86 @@
       <div class="movie-box">
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
         <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+          <h2 class="movie-title" id="comedy-n-2"> La araña humana</h2>
+          <span class="movie-type"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 3-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <div class="box-text">
+          <h2 class="movie-title" id="comedy-n-3"> La araña humana</h2>
+          <span class="movie-type"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 4-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <div class="box-text">
+          <h2 class="movie-title" id="comedy-n-4"> La araña humana</h2>
+          <span class="movie-type"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 5-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <div class="box-text">
+          <h2 class="movie-title" id="comedy-n-5"> La araña humana</h2>
+          <span class="movie-type"> Comedy </span>
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 6-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <div class="box-text">
+          <h2 class="movie-title" id="comedy-n-6"> La araña humana</h2>
+          <span class="movie-type"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="movies container">
+    <!--Heading-->
+    <div class="heading">
+      <h2 class="heading-title"> Action</h2>
+    </div>
+    <!--Movies Content-->
+    <div class="movies-content">
+      <!--Movies Box 1-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="">
+        <div class="box-text">
+          <h2 class="movie-title" id="action-n-1"> La araña humana</h2>
+          <span class="movie-type"> Action </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+
+      <!--Movies Box 2-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <div class="box-text">
+          <h2 class="movie-title" id="action-n-2"> La araña humana</h2>
+          <span class="movie-type"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -266,8 +348,8 @@
       <div class="movie-box">
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
         <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+          <h2 class="movie-title" id="action-n-3"> La araña humana</h2>
+          <span class="movie-type"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -277,8 +359,8 @@
       <div class="movie-box">
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
         <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+          <h2 class="movie-title" id="action-n-4"> La araña humana</h2>
+          <span class="movie-type"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -288,8 +370,8 @@
       <div class="movie-box">
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
         <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+          <h2 class="movie-title" id="action-n-5"> La araña humana</h2>
+          <span class="movie-type"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -299,29 +381,7 @@
       <div class="movie-box">
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
         <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
-          <a href="#" class="watch-btn play-btn">
-            <i class='bx bx-play-circle' ></i>
-          </a>
-        </div>
-      </div>
-      <!--Movies Box 7-->
-      <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
-        <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
-          <a href="#" class="watch-btn play-btn">
-            <i class='bx bx-play-circle' ></i>
-          </a>
-        </div>
-      </div>
-      <!--Movies Box 8-->
-      <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
-        <div class="box-text">
-          <h2 class="movie-title"> La araña humana</h2>
+          <h2 class="movie-title" id="action-n-6"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
