--- a/streamingApp/index.html
+++ b/streamingApp/index.html
@@ -130,7 +130,7 @@
         <!-- Movies Box 1-->
         <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-1">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-1"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-1"> Comedy </span> <!--  Change depending on the API element-->
@@ -143,7 +143,7 @@
         <!-- Movies Box 2-->
         <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-2">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-2"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-2"> Comedy </span> <!--  Change depending on the API element-->
@@ -156,7 +156,7 @@
          <!-- Movies Box 3-->
          <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-3">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-3"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-3"> Comedy </span> <!--  Change depending on the API element-->
@@ -169,7 +169,7 @@
          <!-- Movies Box 4-->
          <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-4">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-4"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-4"> Comedy </span> <!--  Change depending on the API element-->
@@ -182,7 +182,7 @@
          <!-- Movies Box 5-->
          <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-5">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-5"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-5"> Comedy </span> <!--  Change depending on the API element-->
@@ -195,7 +195,7 @@
          <!-- Movies Box 6-->
          <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-6">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-6"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-6"> Comedy </span> <!--  Change depending on the API element-->
@@ -208,7 +208,7 @@
          <!-- Movies Box 7-->
          <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-7">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-7"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-7"> Comedy </span> <!--  Change depending on the API element-->
@@ -221,7 +221,7 @@
          <!-- Movies Box 8-->
          <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-8">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-8"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-8"> Comedy </span> <!--  Change depending on the API element-->
@@ -245,7 +245,7 @@
     <div class="movies-content">
       <!--Movies Box 1-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-1">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-1"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> 
@@ -257,7 +257,7 @@
 
       <!--Movies Box 2-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-2">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-2"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> 
@@ -268,7 +268,7 @@
       </div>
       <!--Movies Box 3-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-3">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-3"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> 
@@ -279,7 +279,7 @@
       </div>
       <!--Movies Box 4-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-4">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-4"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> 
@@ -290,7 +290,7 @@
       </div>
       <!--Movies Box 5-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-5">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-5"> La araña humana</h2>
           <span class="movie-type"> Comedy </span>
@@ -301,7 +301,7 @@
       </div>
       <!--Movies Box 6-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-6">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-6"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> 
@@ -323,7 +323,7 @@
     <div class="movies-content">
       <!--Movies Box 1-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-1">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-1"> La araña humana</h2>
           <span class="movie-type"> Action </span> 
@@ -335,7 +335,7 @@
 
       <!--Movies Box 2-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-2">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-2"> La araña humana</h2>
           <span class="movie-type"> Action </span> 
@@ -346,7 +346,7 @@
       </div>
       <!--Movies Box 3-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-3">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-3"> La araña humana</h2>
           <span class="movie-type"> Action </span> 
@@ -357,7 +357,7 @@
       </div>
       <!--Movies Box 4-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-4">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-4"> La araña humana</h2>
           <span class="movie-type"> Action </span> 
@@ -368,7 +368,7 @@
       </div>
       <!--Movies Box 5-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-5">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-5"> La araña humana</h2>
           <span class="movie-type"> Action </span> 
@@ -379,7 +379,7 @@
       </div>
       <!--Movies Box 6-->
       <div class="movie-box">
-        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-6">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-6"> La araña humana</h2>
           <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
@@ -393,8 +393,8 @@
   </section>
   <!-- Movies Section End-->
   <!--Next Page-->
-  <div class="next-page">
-    <a href="#" class="next-btn">Top</a>
+  <div class="top-page">
+    <a href="#" class="top-btn">Top</a>
   </div>
 <!--Copyright-->
   <div class="copyright">
