--- a/streamingApp/index.html
+++ b/streamingApp/index.html
@@ -64,11 +64,9 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <img src="https://picsum.photos/200/200">
+    <img src="https://picsum.photos/200/200" id="img-big-1">
     <div class="home-text">
-      <h1 class="home-title"><span> The Mountain in the Sky  </span></h1>
-      <p><span> On June 27th </span></p>
-      <a href="#" class="watch-btn btn-cent">
+      <a href="/streamingApp/playPage.html" class="watch-btn btn-cent">
         <i class='bx bx-play-circle' ></i>
         <p><span>Trailer</span></p>
       </a>
@@ -76,11 +74,9 @@
   </div>
 
   <div class="mySlides fade">
-    <img src="https://picsum.photos/200/180">
+    <img src="https://picsum.photos/200/180" id="img-big-2">
     <div class="home-text">
-      <h1 class="home-title"><span> The Mountain in the Sky  </span></h1>
-      <p><span> On June 27th </span></p>
-      <a href="#" class="watch-btn btn-cent">
+      <a href="/streamingApp/playPage.html" class="watch-btn btn-cent">
         <i class='bx bx-play-circle' ></i>
         <p><span>Trailer</span></p>
       </a>
@@ -89,11 +85,9 @@
   </div>
 
   <div class="mySlides fade">
-    <img src="https://picsum.photos/200/160" class="img-s">
+    <img src="https://picsum.photos/200/160" id="img-big-3">
     <div class="home-text">
-      <h1 class="home-title"><span> The Mountain in the Sky  </span></h1>
-      <p><span> On June 27th </span></p>
-      <a href="#" class="watch-btn btn-cent">
+      <a href="/streamingApp/playPage.html" class="watch-btn btn-cent">
         <i class='bx bx-play-circle' ></i>
         <p><span>Trailer</span></p>
       </a>
@@ -130,11 +124,11 @@
         <!-- Movies Box 1-->
         <div class="swiper-slide">
           <div class="movie-box">
-            <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-pop-1">
+            <img src="https://picsum.photos/200/160" id="img-pop-1" class="movie-box-img" id="img-pop-1">
             <div class="box-text">
               <h2 class="movie-title" id="pop-name-1"> La araña humana</h2>
               <span class="movie-type" id="pop-gen-1"> Comedy </span> <!--  Change depending on the API element-->
-              <a href="#" class="watch-btn play-btn">
+              <a href="/streamingApp/playPage.html" class="watch-btn play-btn" id="btn-pop-1">
                 <i class='bx bx-play-circle' ></i>
               </a>
             </div>
@@ -248,8 +242,8 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-1">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-1"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> 
-          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+          <span class="movie-type" id="comedy-g-1"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn" id="btn-comedy-1">
             <i class='bx bx-play-circle' ></i>
           </a>
         </div>
@@ -260,7 +254,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-2">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-2"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> 
+          <span class="movie-type" id="comedy-g-2"> Comedy </span> 
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -271,7 +265,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-3">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-3"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> 
+          <span class="movie-type" id="comedy-g-3"> Comedy </span> 
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -282,7 +276,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-4">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-4"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> 
+          <span class="movie-type" id="comedy-g-4"> Comedy </span> 
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -293,7 +287,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-5">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-5"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span>
+          <span class="movie-type" id="comedy-g-5"> Comedy </span>
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -304,12 +298,35 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-6">
         <div class="box-text">
           <h2 class="movie-title" id="comedy-n-6"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> 
+          <span class="movie-type"id="comedy-g-6"> Comedy </span> 
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
         </div>
       </div>
+      <!--Movies Box 7-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-7">
+        <div class="box-text">
+          <h2 class="movie-title" id="comedy-n-7"> La araña humana</h2>
+          <span class="movie-type" id="comedy-g-7"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 8-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-comedy-8">
+        <div class="box-text">
+          <h2 class="movie-title" id="comedy-n-8"> La araña humana</h2>
+          <span class="movie-type" id="comedy-g-8"> Comedy </span> 
+          <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      
 
     </div>
   </section>
@@ -326,7 +343,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-1">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-1"> La araña humana</h2>
-          <span class="movie-type"> Action </span> 
+          <span class="movie-type" id="action-g-1"> Action </span> 
           <a href="/streamingApp/playPage.html" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -338,7 +355,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-2">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-2"> La araña humana</h2>
-          <span class="movie-type"> Action </span> 
+          <span class="movie-type" id="action-g-2"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -349,7 +366,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-3">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-3"> La araña humana</h2>
-          <span class="movie-type"> Action </span> 
+          <span class="movie-type" id="action-g-3"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -360,7 +377,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-4">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-4"> La araña humana</h2>
-          <span class="movie-type"> Action </span> 
+          <span class="movie-type" id="action-g-4" > Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -371,7 +388,7 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-5">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-5"> La araña humana</h2>
-          <span class="movie-type"> Action </span> 
+          <span class="movie-type" id="action-g-5"> Action </span> 
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -382,7 +399,29 @@
         <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-6">
         <div class="box-text">
           <h2 class="movie-title" id="action-n-6"> La araña humana</h2>
-          <span class="movie-type"> Comedy </span> <!--  Change depending on the API element-->
+          <span class="movie-type" id="action-g-6"> Comedy </span> <!--  Change depending on the API element-->
+          <a href="#" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 7-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-7">
+        <div class="box-text">
+          <h2 class="movie-title" id="action-n-7"> La araña humana</h2>
+          <span class="movie-type" id="action-g-7"> Comedy </span> <!--  Change depending on the API element-->
+          <a href="#" class="watch-btn play-btn">
+            <i class='bx bx-play-circle' ></i>
+          </a>
+        </div>
+      </div>
+      <!--Movies Box 8-->
+      <div class="movie-box">
+        <img src="https://picsum.photos/200/160" alt="" class="movie-box-img" id="img-action-8">
+        <div class="box-text">
+          <h2 class="movie-title" id="action-n-8"> La araña humana</h2>
+          <span class="movie-type" id="action-g-8"> Comedy </span> <!--  Change depending on the API element-->
           <a href="#" class="watch-btn play-btn">
             <i class='bx bx-play-circle' ></i>
           </a>
@@ -404,6 +443,7 @@
 
 
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/streamingApp/swiper-bundle.min.js "></script>
   <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
   <script src="/streamingApp/script.js"></script>
