--- a/streamingApp/playPage.html
+++ b/streamingApp/playPage.html
@@ -108,6 +108,8 @@
 
   </div>
 <!--Js-->
+
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/streamingApp/script.js"></script>
   <script src="/streamingApp/swiper-bundle.min.js "></script>
   <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
